Fix info board overflow-x scrollable issue.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,7 @@
     bottom: 20px;
     width: 300px;
     overflow-y: scroll;
+    overflow-x: hidden;
     -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
     box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
